--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,7 @@ pandas==2.2.3
 pillow==11.0.0
 preshed==3.0.9
 protobuf==5.28.3
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pyarrow==18.1.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
